# 2025-A

./: .gitignore  README.md  daedalus_service.sh
apogee_moveit_config/: CMakeLists.txt  package.xml
apogee_moveit_config/config/: ARM1_moveit.rviz  ARM2_moveit.rviz  apogee_controllers.yaml  arm2d2.srdf  controllers.yaml  moveit.rviz  ompl_planning.yaml
apogee_moveit_config/launch/: apogee_moveit_controller_manager.launch.xml  arm1_rviz.launch  move_group.launch  moveit_bringup.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml
apogee_robot_core/: CMakeLists.txt  README.md  package.xml
apogee_robot_core/docs/: robot_control_services.md
apogee_robot_core/include/: apogee_hardware_interface.h  moveit_interface.h
apogee_robot_core/include/apogee_robot_core/: CommonComms.h
apogee_robot_core/launch/: arm2d2.launch  control_performance.launch  core_bringup.launch  realsensecamera.py  realsensetest.py
apogee_robot_core/scripts/tests/: test_catch_planning  view_control_performance
apogee_robot_core/src/: apogee_hardware_interface.cpp  ember_contorl_system  hardware_interface_node.cpp  moveit_interface.cpp  teensy_interface.cpp
apogee_vision/: CMakeLists.txt  README.md  package.xml  setup.py
apogee_vision/config/: marsha_param.yaml  particle_filter_config.yaml  trajectory_predictor_config.yaml
apogee_vision/docs/: angular_filter copy.md  angular_filter.md  orientation_tracking.md  velocity_filter.md
apogee_vision/include/: tracker_lib.h
apogee_vision/include/apogee_vision/: AngularFilter.h  EigenUtil.h  KalmanFilter.h  OrientationPredictor.h  PositionFilter.h  TrajectorySearch.h  VelocityFilter.h  kalman_filter.cpp
apogee_vision/launch/: predict_trajectory.launch  record.launch  test_trajectory_prediction.launch  track_object.launch
apogee_vision/nodes/: color_filter  deepsat_server  depth_cam_server  realsense_record  remap_object_pose
apogee_vision/obsolete/: angular_filter.cpp
apogee_vision/scripts/: apply_force  cam_frame  color_filter  deepsat_data_generator  deepsat_trainer  depth_view  icp  plot_trajectory  point_cloud_py  view
apogee_vision/scripts/tests/: graph_angular_velocity  orientation_axis  trajectory_prediction_accuracy  velocity_estimation_accuracy  view_orientation_state
apogee_vision/src/: angular_filter.cpp  eigen_util.cpp  object_tracking.cpp  object_tracking_gui.cpp  point_cloud.cpp  rviz_tracked_object.cpp  spinning_object.cpp  tracker_lib.cpp  trajectory_predictor.cpp
apogee_vision/src/apogee_vision/: deepsatnet.py  depth_cam.py  realsense_camera.py  util.py
apogee_vision/src/tests/: kalman_convergence_test.cpp  kalman_prediction_test.cpp  trajectory_searcher_test.cpp
apogee_vision/src/trajectory_prediction/: marsha_trajectory_predictor.cpp  orientation_predictor.cpp  position_filter.cpp  trajectory_predictor.cpp  velocity_filter.cpp
arm2d2_description/: CMakeLists.txt  package.xml
arm2d2_description/meshes/: cube_coarse.pcd  wrench.pcd  wrench.ply
arm2d2_description/scripts/: generate_urdf.py
arm2d2_description/urdf/: arm2d2.urdf  arm2d2.urdf.xacro  arm2d2.xml  cube.xml  wrench.xml
arm2d2_v2_description/: CMakeLists.txt  README.md  package.xml  test.urdf.xacro
arm2d2_v2_description/config/: controllers.yaml  joint_config.yaml  poses.yaml
arm2d2_v2_description/launch/: config.launch
arm2d2_v2_description/meshes/: base_plate.pcd
arm2d2_v2_description/scripts/: generate_urdf.py
arm2d2_v2_description/urdf/: arm2d2.srdf  arm2d2.urdf  arm2d2.urdf.xacro  arm2d2.xml  training_env.xml
arm2d2_v3_description/: CMakeLists.txt  arm2d2_v3.urdf  package.xml
arm2d2_v3_description/config/: apogee_controllers.yaml  joint_config.yaml
arm2v4_description/: CMakeLists.txt  package.xml
daedalus_core/: CMakeLists.txt  README.md  package.xml
daedalus_core/config/: schedule_rates.yaml
daedalus_core/launch/: ARM1_mission.launch  ARM2_mission.launch  teensyARM2.launch
daedalus_core/nodes/: ARM1_pcs  ARM2_pcs  detector_node  ember_control_node  led_node
daedalus_core/src/daedalus_core/: ember_control_system.py  pcs_hw_states.py  pcs_move_states.py  pcs_states.py  pcs_util.py  signal_detector.py
daedalus_core/src/daedalus_core/daedalus_services/: move_cmds.py
daedalus_msgs/: CMakeLists.txt  package.xml
daedalus_msgs/msg/: OrientationState.msg  RGBDFrame.msg
daedalus_msgs/srv/: DeviceCmd.srv  ExecuteGrasp.srv  ObjectObservation.srv  PlanGrasp.srv  PredictPosition.srv  TrajectoryPoints.srv
docs/: introduction.md  jetson_setup.md  literature.md  network_setup.md  pcd_generation.md  programs.md  todo.md
install/: install.sh  install_pcl.sh
marsha_msgs/: CMakeLists.txt
mog_ai/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
mog_ai/config/: model_config.yaml
mog_ai/launch/: generate_grasp_data.launch  mog_ai.launch  mog_ai_debug.launch  test_vae.launch
mog_ai/models/: model_3.data-00000-of-00001  model_3.index
mog_ai/models/grasp_vae_models/: vae_4latent_4_layers_5kanneal_minibatch_1.data-00000-of-00001  vae_4latent_4_layers_5kanneal_minibatch_1.index
mog_ai/nodes/: catch_ai  marsha_ai  reset_server  vae_server
mog_ai/scripts/: grasp_data_generator  reset_server  spawn_tensorboard  test_vae_grasps  training_scheduler
mog_ai/src/marsha_ai/catch_bandit/: catch_interface.py
mog_ai/src/mog_ai/: callbacks.py  catch_interface.py  catch_interface_debug.py  grasp_vae.py  gym_env.py  quaternion.py  ros_interface.py  test.py  vector_util.py
mog_ai/srv/: GenerateGrasp.srv
mujoco_ros/: CMakeLists.txt  README.md  package.xml
mujoco_ros/cmake/: Findmujoco.cmake
mujoco_ros/docs/: known_issues.md
mujoco_ros/include/: ctrl_interface.h  physics.h
mujoco_ros/launch/: arm2d2.launch  sim.launch
mujoco_ros/src/: ctrl_interface.cpp  physics.cpp  ros_sim.cpp
mujoco_ros/srv/: ApplyForce.srv  SetBody.srv
object_description/: CMakeLists.txt  package.xml
v5_gripper_description/: CMakeLists.txt  package.xml
(+145 files in other folders)
