<?xml version="1.0"?>
<package>
  <name>apogee_robot_core</name>
  <version>0.1.0</version>
  <description>Manages core functions for Apogee Robotics</description>

  <maintainer email="borger.aaron@gmail.com">Aaron Borger</maintainer>
  <author email="aborger@nnu.edu">Aaron Borger</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>daedalus_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <run_depend>moveit_msgs</run_depend>
  <run_depend>daedalus_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>



  <export>

  </export>

</package>