<?xml version="1.0"?>
<package format="2">
  <name>arm2d2_v2_description</name>
  <version>1.0.1</version>
  <description>The ARM2D2_description package</description>

  <maintainer email="borger.aaron@gmail.com">Aaron Borger</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <export>

  </export>
</package>