<?xml version="1.0"?>
<package format="2">
  <name>daedalus_core</name>
  <version>1.0.0</version>
  <description>Contains items like mission parameter data items, node scheduling and the mission state machine</description>

  <maintainer email="borger.aaron@gmail.com">Aaron Borger</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>daedalus_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>daedalus_msgs</exec_depend>


  <export>

  </export>
</package>